src/test/ui/error-codes/E0509.stderr
error[E0509]: cannot move out of type `DropStruct`, which implements the `Drop` trait
  --> $DIR/E0509.rs:26:23
   |
LL |     let fancy_field = drop_struct.fancy; //~ ERROR E0509
   |                       ^^^^^^^^^^^^^^^^^
   |                       |
   |                       cannot move out of here
   |                       help: consider using a reference instead: `&drop_struct.fancy`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0509"
